# template-axum-htmx-vite-tailwind

./: .gitignore  Cargo.toml  README.md
src/: main.rs
web/: index.html  package.json  pnpm-lock.yaml  rome.json  tailwind.config.cjs
