[package]
name = "template-axum-htmx-vite-tailwind"
version = "0.1.0"
edition = "2021"

[dependencies]
# async
tokio = { version = "1.32.0", features = ["full"] }

# live-reloading helper
notify = "6.0.1"
notify-debouncer-mini = "0.4.0"

# web
axum = "0.6.20"
tower = "0.4.8"
tower-http = { version = "0.4.3", features = ["fs", "set-header"] }
tower-livereload = "0.8.0"

# logging
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
